@@ -1,6 +1,6 @@
 Package: R2jags
-Version: 0.02-08
-Date: 2010-5-23
+Version: 0.02-09
+Date: 2010-8-10
 Title: A Package for Running jags from R
 Author: Yu-Sung Su <ys463@columbia.edu>, 
         Masanao Yajima <yajima@stat.columbia.edu>,
